# Umay.Engine.Api

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
include/: asset_manager.h  gameObject.h  node_2d.h  node_3d.h  print.h  vec2.h  vec3.h  world.h
lib/cdl/: keyValuePair.h  listInterface.h  numbers.h
src/: asset_manager.c  node_2d.c  node_3d.c  print.c  vec2.c  vec3.c
test/: CMakeLists.txt
test/asset_manager/: CMakeLists.txt  asset_manager_test  main.c
test/gameObject/: CMakeLists.txt  main.c  test
test/node3d/: CMakeLists.txt  main.c  node3d_test
test/vec3/: CMakeLists.txt  main.c  v3_test
